# Elastos.DittoBox.Server

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
cmake/: CarrierDefaults.cmake  CarrierPackages.cmake
config/: elaoc-agent.conf
debian/: control  postinst  postrm  prerm
docker/: .env  Dockerfile  README.md  build.bat  build.sh
docker/hooks/: build  build.bat
docker/rootfs/etc/entrypoint.d/: 75-agent.sh
docker/rootfs/etc/owncloud.d/: 29-oc-agent-config.sh  95-oc-agent.sh
docker/rootfs/var/www/owncloud/core/templates/: layout.guest.php
scripts/: elaoc-agentd.service  elaoc-agentd.sh
src/: CMakeLists.txt  Makefile
src/daemon/: CMakeLists.txt  Makefile  client.conf  config.c  config.h  elaoc-agent.conf  elaoc-agent.sh  pfd.c
src/pfd/: Makefile
